# blog

./: .env  .flake8  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: cicd.yml
alembic/: env.py
alembic/versions/: 2024_10_27_0636-6d6b5c88f03f_initialize_tables.py  2024_10_27_0846-b4ec94864a41_initialize_tables.py
backend/: .gitignore  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2024_11_14_0957-a94b413b93e5_initialize_tables.py  2024_11_14_1211-c1cda7887200_add_message_model.py  2024_11_15_1459-5cd704c0fb8e_add_avatar_column.py  2024_11_18_1110-f0a1e55e981f_.py
backend/src/: app.py  config.py  database.py  dependencies.py  event_listener.py  logger.py  misc.py
backend/src/admin_panel/: auth.py  views.py
backend/src/back/: app.py  dependencies.py  event_listener.py
backend/src/exceptions/: auth_exceptions.py  comment_exceptions.py  connection_exceptions.py  post_exceptions.py  user_exceptions.py
backend/src/managers/: openai_manager.py
backend/src/models/: comments.py  likes.py  posts.py  users.py
backend/src/repositories/: abstract_repository.py  (+6 more)
backend/tests/: conftest.py
frontend/: package-lock.json  package.json
frontend/src/: App.js  routes.js
src/: config.py  database.py  misc.py
src/back/: app.py  dependencies.py  event_listener.py
src/managers/: openai_manager.py
tests/: conftest.py
tests/integration_tests/: test_user_api.py
tests/mocks/: mock_comments.json  mock_posts.json  mock_users.json
tests/unit_tests/: test_analytic.py  test_posts_dao.py  test_users_dao.py
(+144 files in other folders)
